Add MQ JSon feature
Add MQ feature and JSon conversion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=crm
+server.port=8080
 
 spring.datasource.url=jdbc:h2:mem:crm
 spring.datasource.driverClassName=org.h2.Driver
@@ -26,5 +27,24 @@ spring.flyway.group=true
 
 spring.jackson.date-format=yyyy-MM-dd
 
+# ip
+crm.mq.host=localhost
+# Port
+crm.mq.port=1414
+#(Queue manager name)
+crm.mq.queue-manager=QM1
+#(Queue name)
+crm.mq.queue-name=QL1
+#(channel name)
+crm.mq.channel=CRM.QM1
+#Created MQ user
+#crm.mq.username=ibmfinance
+#Created MQ user connection password
+#crm.mq.password=ibmfinance
+#overtime time 
+crm.mq.receive-timeout=10000
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
