Implementation of the IBM Queue with JMS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.show_sql=false
@@ -32,11 +32,11 @@ crm.mq.host=localhost
 # Port
 crm.mq.port=1414
 #(Queue manager name)
-crm.mq.queue-manager=QM1
+crm.mq.queue-manager=CRM_QMANAGER
 #(Queue name)
-crm.mq.queue-name=QL1
+crm.mq.queue-name=CRM_QL_INBOUND
 #(channel name)
-crm.mq.channel=CRM.QM1
+crm.mq.channel=CRM.APP.SVRCONN
 #Created MQ user
 #crm.mq.username=ibmfinance
 #Created MQ user connection password
